/*
 * $Id: ChangeLog,v 1.2970 2004/05/21 21:27:30 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-05-21 14:29 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/cstruct.prg
    + Added :CopyTo( nTargetPointer ) METHOD.

2004-05-21 23:30 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
   ! fixed buffered ordKeyNo() value

2004-05-21 15:30 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
   * check for bag name in hb_cdxFindTag() (SELF_ORDINFO)

  * xharbour/source/rdd/dbfcdx/dbcmd.c
   ! always initialize atomBagName (to NULL if not necessary)

2004-05-21 07:05 UTC-0400 Sylvain Robert <s.robert/at/videotron.ca>
  * xharbour/contrib/mysql/makefile.vc
    * minor correction

2004-05-21 04:25 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/make_tgz.sh
  * xharbour/xharbour.spec
  * xharbour/utils/xbscript/Makefile
  - xharbour/ppclass.ch
    * updated for recent Ron changes: pp->xbscript

2004-05-20 17:02 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/errorsys.prg
    * Use plain Alert() if MaxCol() is 0 - so that error is always reported.

2004-03-20 23:30 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/rdd/dbf1.c
    + added DBI_ISFLOCK to DBINFO()
    * casting

2004-05-20 14:07 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  -  tests/pp.prg
  -  tests/pp.txt
  -  tests/pp_harb.ch
  -  tests/ppclass.prg
  -  tests/pptest.prg
  -  tests/prgscrpt.prg
  -  tests/rp_dot.src
  -  tests/rp_run.src
  + utils/xbscript/Makefile
  + utils/xbscript/prgscrpt.prg
  + utils/xbscript/rp_dot.src
  + utils/xbscript/rp_run.src
  + utils/xbscript/xbs_harb.ch
  + utils/xbscript/xbsclass.ch
  + utils/xbscript/xbscript.prg
  + utils/xbscript/xbscript.txt
  + utils/xbscript/xbstest.prg